Updated  Maven version information
Signed-off-by: jbrown <jbrown@JAMES-DP250.datapak.local>